Some working validation, plus some refactoring
