# api/docs/swagger.json
@@ -44,7 +44,7 @@
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -82,13 +82,13 @@
                     "415": {
                         "description": "Bad Content-Type",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     },
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -123,13 +123,13 @@
                     "404": {
                         "description": "Not found",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     },
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -156,7 +156,7 @@
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -201,13 +201,13 @@
                     "415": {
                         "description": "Bad Content-Type",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     },
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -236,7 +236,7 @@
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -274,13 +274,13 @@
                     "415": {
                         "description": "Bad Content-Type",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     },
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -299,7 +299,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "format": "uuid",
+                        "format": "url",
                         "description": "Collection ID",
                         "name": "id",
                         "in": "path",
@@ -316,13 +316,13 @@
                     "404": {
                         "description": "Not found",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     },
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -336,7 +336,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "format": "uuid",
+                        "format": "url",
                         "description": "Collection ID",
                         "name": "id",
                         "in": "path",
@@ -353,7 +353,7 @@
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -373,7 +373,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "format": "uuid",
+                        "format": "url",
                         "description": "Collection ID",
                         "name": "id",
                         "in": "path",
@@ -399,13 +399,13 @@
                     "415": {
                         "description": "Bad Content-Type",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     },
                     "500": {
                         "description": "Server error",
                         "schema": {
-                            "$ref": "#/definitions/model.Error"
+                            "$ref": "#/definitions/model.Errors"
                         }
                     }
                 }
@@ -415,6 +415,11 @@
     "definitions": {
         "model.Category": {
             "type": "object",
+            "required": [
+                "id",
+                "name",
+                "type"
+            ],
             "properties": {
                 "field_defs": {
                     "description": "example:\"{\\\"int_field\\\":\\\"Int\\\", \\\"string_field\\\":\\\"String\\\"}\"",
@@ -442,6 +447,9 @@
         },
         "model.CategoryIn": {
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
                 "field_defs": {
                     "description": "example:\"{\\\"int_field\\\":\\\"Int\\\", \\\"string_field\\\":\\\"String\\\"}\"",
@@ -455,6 +463,10 @@
         },
         "model.CategoryRef": {
             "type": "object",
+            "required": [
+                "id",
+                "type"
+            ],
             "properties": {
                 "id": {
                     "type": "string",
@@ -468,6 +480,12 @@
         },
         "model.Collection": {
             "type": "object",
+            "required": [
+                "category",
+                "id",
+                "name",
+                "type"
+            ],
             "properties": {
                 "category": {
                     "type": "object",
@@ -500,6 +518,10 @@
         },
         "model.CollectionIn": {
             "type": "object",
+            "required": [
+                "category",
+                "name"
+            ],
             "properties": {
                 "category": {
                     "type": "object",
@@ -520,11 +542,23 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "message": {
                     "type": "string"
+                },
+                "params": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
+            }
+        },
+        "model.Errors": {
+            "type": "array",
+            "items": {
+                "$ref": "#/definitions/model.Error"
             }
         },
         "model.FieldDef": {
