# model/collection.go
@@ -12,6 +12,8 @@ import (
 // CollectionIDFormat is the format for Collection IDs
 const CollectionIDFormat = "/collections/%d"
 
+var CollectionName = "collection"
+
 // CollectionPersister defines methods needed to persist categories
 type CollectionPersister interface {
 	SelectCollections() ([]Collection, error)
@@ -23,7 +25,7 @@ type CollectionPersister interface {
 
 // CollectionBody is the JSON body of a Collection
 type CollectionBody struct {
-	Name             string             `json:"name,omitempty"`
+	Name             string             `json:"name,omitempty" validate:"required,omitempty"`
 	Location         string             `json:"location,omitempty"`
 	CitationTemplate *template.Template `json:"citation_template,omitempty"`
 }
@@ -43,7 +45,7 @@ func (cb *CollectionBody) Scan(value interface{}) error {
 }
 
 // NewCollectionBody builds a CollectionBody
-// func NewCollectionBody(name string, category *Category, location string, template *template.Template) CollectionBody {
+// func NewCollectionBody(name string, category Category, location string, template template.Template) CollectionBody {
 // 	// TODO: validation
 // 	return CollectionBody{
 // 		Name:             name,
@@ -55,20 +57,21 @@ func (cb *CollectionBody) Scan(value interface{}) error {
 // CollectionIn is the payload to create or update a Collection
 type CollectionIn struct {
 	CollectionBody
-	Category CategoryRef `json:"category"`
+	Category CategoryRef `json:"category,omitempty" validate:"required,omitempty"`
 }
 
 // CollectionRef is a reference to a Category
 type CollectionRef struct {
-	ID   string `json:"id,omitempty" example:"/collections/999"`
-	Type string `json:"type,omitempty" example:"collection"`
+	ID   string `json:"id,omitempty" example:"/collections/999" validate:"required"`
+	Type string `json:"type,omitempty" example:"collection" validate:"required"`
 }
 
 // NewCollectionRef constructs a CollectionRef from an id
 func NewCollectionRef(id int32) CollectionRef {
+	cid := fmt.Sprintf(pathPrefix+CollectionIDFormat, id)
 	return CollectionRef{
-		ID:   fmt.Sprintf(pathPrefix+CollectionIDFormat, id),
-		Type: "collection",
+		ID:   cid,
+		Type: CollectionName,
 	}
 }
 
@@ -76,19 +79,20 @@ func NewCollectionRef(id int32) CollectionRef {
 type Collection struct {
 	CollectionRef
 	CollectionBody
-	Category       CategoryRef `json:"category"`
+	Category       CategoryRef `json:"category" validate:"required"`
 	InsertTime     time.Time   `json:"insert_time,omitempty"`
 	LastUpdateTime time.Time   `json:"last_update_time,omitempty"`
 }
 
 // NewCollection constructs a Collection from a CollectionIn
 func NewCollection(id int32, ci CollectionIn) Collection {
+	now := time.Now()
 	c := Collection{
 		CollectionRef:  NewCollectionRef(id),
 		CollectionBody: ci.CollectionBody,
 		Category:       ci.Category,
-		InsertTime:     time.Now(),
-		LastUpdateTime: time.Now(),
+		InsertTime:     now,
+		LastUpdateTime: now,
 	}
 	return c
 }
